--- a/cv.html
+++ b/cv.html
@@ -99,7 +99,7 @@
 		</tr>
 
 			<tr>
-				<td colspan="3">
+				<td colspan="1">
 				<h2>Mr. Mashiour Rahman</h2>
 				<p><em>Director, FST</em></p>
 				<p><em>American International University-Bangladesh(AIUB)</em></p>
@@ -109,8 +109,8 @@
 
 				</td>
 
-				<td colspan="3">
-				<h2>Mr. Mashiour Rahman</h2>
+				<td colspan="1">
+				<h2>Dr. Dipnandi</h2>
 				<p><em>Director, FST</em></p>
 				<p><em>American International University-Bangladesh(AIUB)</em></p>
 				<p><strong>Contact No: </strong>017100000</p>
@@ -121,12 +121,14 @@
 			</tr>
 
 		<tr>
-			<td width="100%" colspan="2">
+			<td width="100%" colspan="1">
 				
 			</td>
 			<td>
+				<br>
+				<br>
 				<hr>
-				<h5>Signature</h5>
+				<center><h5>Signature</h5></center>
 			</td>
 		</tr>
 	</table>
